--- a/appsettings.json
+++ b/appsettings.json
@@ -55,7 +55,7 @@
     "HealthChecks": [
       {
         "Name": "Infraestrutura",
-        "Uri": "https://localhost:5001/healthchecks-data-ui"
+        "Uri": "https://localhost:5001/dashboard"
       }
     ]
   },
